[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["sam <sgrowe@live.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecount = "0.6.2"
tinyvec = "1.1.0"

[dev-dependencies]
test-case = "1.0.0"
